--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'dagger.hilt.android.plugin'
+    id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs'
 }
 
 android {
@@ -14,6 +17,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
+        buildConfigField "String", "API_PRODUCTION_URL", "\"https://api.openweathermap.org/data/2.5/\""
+        buildConfigField "String", "STAGE_BASE_URL", "\"https://api.openweathermap.org/data/2.5/\""
+        buildConfigField "boolean", "DEMO_MODE", "Boolean.parseBoolean(\"true\")"
     }
 
     buildTypes {
@@ -40,4 +47,65 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Kotlin
+    implementation "androidx.fragment:fragment-ktx:1.5.0-alpha03"
+
+    // MaterialDesign
+    implementation 'com.google.android.material:material:1.6.0-alpha03'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    // Navigation Component
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.0-alpha03"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.0-alpha03"
+    implementation "androidx.navigation:navigation-runtime-ktx:2.5.0-alpha03"
+
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-moshi:2.7.2"
+
+
+    // Moshi
+    implementation 'com.squareup.moshi:moshi-kotlin:1.9.1'
+    implementation 'com.squareup.moshi:moshi-adapters:1.8.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.12.0"
+
+
+    // Logging Interceptor
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
+    implementation 'org.conscrypt:conscrypt-android:2.5.2'
+
+
+    // Dagger Hilt
+    implementation 'com.google.dagger:hilt-android:2.41'
+    kapt 'com.google.dagger:hilt-compiler:2.41'
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+    implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
+
+    // Lottie3 Animation
+    implementation 'com.airbnb.android:lottie:3.7.0'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
+
+
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.5.0-native-mt'
+
+    // Coroutine Lifecycle Scopes
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
+
+
 }
