--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,5 +113,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.1'
 
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
 
 }
