--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,8 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "ir.ah.weather.HiltTestRunner"
+
         vectorDrawables.useSupportLibrary = true
         buildConfigField "String", "API_PRODUCTION_URL", "\"https://api.openweathermap.org/data/2.5/\""
         buildConfigField "String", "STAGE_BASE_URL", "\"https://api.openweathermap.org/data/2.5/\""
@@ -41,6 +42,36 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+    packagingOptions {
+        exclude "**/attach_hotspot_windows.dll"
+        exclude "META-INF/licenses/**"
+        exclude "META-INF/AL2.0"
+        exclude "META-INF/LGPL2.1"
+
+    }
+
+    sourceSets {
+        String sharedTestDir = 'src/sharedTest/java'
+        test {
+            java.srcDirs += sharedTestDir
+        }
+        androidTest {
+            java.srcDirs += sharedTestDir
+        }
+    }
+//    android.testOptions {
+//
+//        unitTests.all {
+//            useJUnitPlatform()
+//        }
+//    }
+
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
 }
 
 dependencies {
@@ -49,6 +80,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'junit:junit:4.12'
+    implementation 'androidx.test.ext:junit-ktx:1.1.3'
+    implementation 'androidx.test:runner:1.4.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -104,14 +138,66 @@ dependencies {
 
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.5.0-native-mt'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.0'
 
     // Coroutine Lifecycle Scopes
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.1'
 
+    // Local Unit Tests
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "com.google.truth:truth:1.1.3"
+    testImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.2'
 
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // Instrumented Unit Tests
+    androidTestImplementation "junit:junit:4.13.2"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "com.google.truth:truth:1.1.3"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.37'
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.37'
+    androidTestImplementation 'org.mockito:mockito-core:3.11.2'
+    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.28.1"
+    debugImplementation 'com.github.chuckerteam.chucker:library:3.5.0'
+    releaseImplementation 'com.github.chuckerteam.chucker:library-no-op:3.5.0'
+    debugImplementation "androidx.fragment:fragment-testing:1.4.1"
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:5.0.0-alpha.2"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
+
+//For InstantTaskExecutorRule
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    // Add Test Extention to Flow
+    testImplementation 'app.cash.turbine:turbine:0.5.2'
+
+    testImplementation 'io.kotest:kotest-runner-junit5:5.1.0' // for kotest framework
+    testImplementation 'io.kotest:kotest-assertions-core:5.1.0' // for kotest core jvm assertions
+    testImplementation 'io.kotest:kotest-property:5.1.0' // for kotest property test
+    // For Robolectric tests.
+    testImplementation 'com.google.dagger:hilt-android-testing:2.38.1'
+    // ...with Kotlin.
+    kaptTest 'com.google.dagger:hilt-android-compiler:2.38.1'
+    // ...with Java.
+    testAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.38.1'
+
+
+    // For instrumented tests.
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.38.1'
+    // ...with Kotlin.
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.38.1'
+    // ...with Java.
+    androidTestAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.38.1'
+    testImplementation "org.robolectric:robolectric:4.2.1"
+
+}
+kapt {
+    correctErrorTypes true
 }
