--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "ir.ah.weather.HiltTestRunner"
+//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         vectorDrawables.useSupportLibrary = true
         buildConfigField "String", "API_PRODUCTION_URL", "\"https://api.openweathermap.org/data/2.5/\""
@@ -163,8 +164,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
-    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.37'
-    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.37'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.38.1'
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.38.1'
     androidTestImplementation 'org.mockito:mockito-core:3.11.2'
     androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.28.1"
     debugImplementation 'com.github.chuckerteam.chucker:library:3.5.0'
@@ -198,6 +199,34 @@ dependencies {
     androidTestAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.38.1'
     testImplementation "org.robolectric:robolectric:4.2.1"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+
+    // AndroidX test
+    def androidx_test_version = "1.4.0"
+    androidTestImplementation "androidx.test:core:1.4.0"
+    // 4) Jupiter API & Test Runner, if you don't have it already
+    androidTestImplementation "androidx.test:runner:1.4.0"
+    androidTestImplementation "org.junit.jupiter:junit-jupiter-api:5.8.2"
+
+    // 5) The instrumentation test companion libraries
+    androidTestImplementation "de.mannodermaus.junit5:android-test-core:1.3.0"
+    androidTestRuntimeOnly "de.mannodermaus.junit5:android-test-runner:1.3.0"
+
+    // (Required) Writing and executing Unit Tests on the JUnit Platform
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.8.2"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.2"
+
+    // (Optional) If you need "Parameterized Tests"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:5.8.2"
+
+    // (Optional) If you also have JUnit 4-based tests
+    testImplementation "junit:junit:4.13.2"
+    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.8.2"
+
+
+    // -------- MOCKITO
+    def mockito_version = "2.19.0"
+    testImplementation "org.mockito:mockito-core:3.11.2"
 
 
 }
