--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,7 +81,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'junit:junit:4.12'
+    implementation 'junit:junit:4.13.2'
     implementation 'androidx.test.ext:junit-ktx:1.1.3'
     implementation 'androidx.test:runner:1.4.0'
     testImplementation 'junit:junit:4.13.2'
@@ -228,6 +228,7 @@ dependencies {
     def mockito_version = "2.19.0"
     testImplementation "org.mockito:mockito-core:3.11.2"
 
+     debugImplementation "androidx.fragment:fragment-testing:1.4.1"
 
 }
 kapt {
